--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -1,13 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  commenter: MyString
-  body: MyText
-  body_rendered: MyText
-  discussion_id: 
-
-two:
-  commenter: MyString
-  body: MyText
-  body_rendered: MyText
-  discussion_id: 
+  commenter: Lachlan
+  body: Yay! This is my test comment.
+  body_rendered: <p>Yay! This is my test comment.</p>
+  discussion_id: 1
